--- a/css/style.scss
+++ b/css/style.scss
@@ -2,24 +2,16 @@
 @import "normalize";
 @import "variables";
 @import "mixins";
-@import "fullPagePlugin";
 
 body {
+  font-family: 'Nunito', sans-serif;
+  font-size: 16px;
   text-align: center;
 }
 
-.pasek {
-  height: 20%;
-  background-color: green;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
-
-.wrapper {
-  width: 80%;
-  margin: 0 auto;
-  background-color: silver;
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
 #bg-hero {
@@ -36,44 +28,3 @@ body {
   width: 100%;
 }
 
-.section {
-  text-align: center;
-}
-
-.button {
-  color: black;
-  background-color: white;
-}
-
-.fp-controlArrow.fp-prev {
-  left: 150px;
-}
-
-// ====== MAIN DESKTOP NAVIGATION ======
-
-.main-nav {
-  position: fixed;
-  height: 100vh;
-  width: 10%;
-  color: black;
-  background-color: white;
-  z-index: 100000;
-  top: 0;
-  left: 0;
-}
-
-.main-nav-btn {
-  border: 1px solid red;
-  height: 20%;
-  width: 100%;
-}
-
-.main-nav-btn a {
-  display: block;
-  height: 100%;
-  width: 100%;
-}
-
-.main-logo img {
-  width: 100%;
-}
