--- a/css/style.scss
+++ b/css/style.scss
@@ -14,17 +14,53 @@ a {
   text-decoration: none;
 }
 
-#bg-hero {
-  background: url("../assets/images/macbook.jpg") center;
-  background-size: cover;
+
+// ====== HEADER SECTION ======
+
+
+#scene {
+  background-color: #010005;
   width: 100%;
 }
 
-#fg-hero {
-  background: url("../assets/images/macbook2.jpg") center;
-  background-position: right;
-  background-size: cover;
+.parallax-bg {
+  background: url("../assets/images/macbook.jpg") no-repeat center;
+  background-size: contain;
+  width: 100%;
+  padding-bottom: 50%;
+}
+
+.parallax-fg {
+  background: url("../assets/images/macbook-blur.jpg") no-repeat center;
+  background-size: contain;
   opacity: .6;
   width: 100%;
+  padding-bottom: 50%;
 }
 
+.main-header {
+  font-size: 2vw;
+  font-family: 'Righteous', cursive;
+  font-weight: lighter;
+  color: #F8F2E2;
+  margin: 4% auto 0;
+  width: 100%;
+  z-index: 1000;
+}
+
+.main-header > * {
+  margin: 0;
+}
+
+.main-header h1 {
+  font-size: 6vw;
+}
+
+.main-header h1 span {
+  color: #3BC391;
+  font-size: 8vw;
+  text-transform: uppercase;
+}
+
+// styles for portfolio button
+@include portfolioBtn;
