--- a/css/style.scss
+++ b/css/style.scss
@@ -3,8 +3,16 @@
 @import "variables";
 @import "mixins";
 
+
+body * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-  font-family: 'Nunito', sans-serif;
+  color: $color-mainBlack;
+  font-family: $font-nunito;
   font-size: 16px;
   text-align: center;
 }
@@ -14,53 +22,149 @@ a {
   text-decoration: none;
 }
 
+.wrapper {
+  //margin: 0 7% 0 13%;
+  margin: 0 auto;
+  width: 80%;
+  max-width: 1200px;
+}
 
 // ====== HEADER SECTION ======
 
-
-#scene {
-  background-color: #010005;
-  width: 100%;
-}
-
-.parallax-bg {
-  background: url("../assets/images/macbook.jpg") no-repeat center;
-  background-size: contain;
-  width: 100%;
-  padding-bottom: 50%;
-}
-
-.parallax-fg {
+.hero {
   background: url("../assets/images/macbook-blur.jpg") no-repeat center;
-  background-size: contain;
-  opacity: .6;
-  width: 100%;
-  padding-bottom: 50%;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 .main-header {
-  font-size: 2vw;
-  font-family: 'Righteous', cursive;
-  font-weight: lighter;
-  color: #F8F2E2;
-  margin: 4% auto 0;
-  width: 100%;
-  z-index: 1000;
-}
-
-.main-header > * {
-  margin: 0;
+  font-size: 2rem;
+  font-family: $font-righteous;
+  color: $color-mainWhite;
+  padding: 6% 0;
 }
 
 .main-header h1 {
-  font-size: 6vw;
+  font-size: 5rem;
 }
 
 .main-header h1 span {
-  color: #3BC391;
-  font-size: 8vw;
+  color: $color-mainGreen;
+  font-size: 7rem;
   text-transform: uppercase;
 }
 
+.main-header .arrow-down {
+  color: $color-mainGreen;
+  font-size: 6rem;
+  display: block;
+  margin: 10rem 0 3rem;
+  transition: .2s;
+}
+
+.main-header .arrow-down:hover {
+  color: darken($color-mainGreen, 10%);
+  transition: .2s;
+}
+
+
 // styles for portfolio button
 @include portfolioBtn;
+
+
+// ====== HOME PAGE SECTION ======
+
+// navigation bar styles =====
+.nav-bar {
+  color: $color-mainBlack;
+  background-color: $color-mainWhite;
+  height: 100vh;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 8vw;
+  z-index: 99999999;
+}
+
+.main-logo img {
+  width: 100%;
+}
+
+.menu {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.menu .fa {
+  display: block;
+  font-size: 4vw;
+  padding-top: 20%;
+}
+
+.menu li {
+  height: 20vh;
+}
+
+.menu li a {
+  display: block;
+  font-size: 1.2vw;
+  height: 100%;
+}
+
+
+// ====== ABOUT SECTION ======
+
+.about {
+  background-color: $color-mainGreen;
+}
+
+.about h2 {
+  @include headlineTwo;
+}
+
+.about-flex {
+  display: flex;
+  flex-direction: row;
+  margin-top: 8%;
+  justify-content: space-between;
+}
+
+.about-image {
+  width: 40%;
+  position: relative;
+  text-align: center;
+}
+
+.about-image img {
+  max-width: 350px;
+  position: absolute;
+  bottom: 0;
+  left: 20%;
+}
+
+.about-text {
+  width: 50%;
+  //font-size: 1rem;
+  text-align: right;
+  padding-bottom: 5%;
+}
+
+.about-quote {
+  font-size: 2rem;
+  font-weight: bolder;
+  background-color: darken($color-mainGreen, 10%);
+  padding: 4% 0 3%;
+  width: 100%;
+}
+
+.about-quote p {
+  display: inline-block;
+}
+
+.about-quote footer {
+  font-size: 1rem;
+  font-weight: normal;
+  text-align: right;
+
+}
