8 added skills section markup and styles

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -10,3 +10,6 @@ $color-bgHeader: #010005;
 $color-mainWhite: #F8F2E2;
 $color-mainGreen: #3BC391;
 $color-mainBlack: #1d1d1d;
+$color-mainBlue: #2f79c3;
+$color-mainGrey: #374047;
+$color-mainRed: #eb4549;
