--- a/css/style.css
+++ b/css/style.css
@@ -416,7 +416,7 @@ a {
 }
 
 .wrapper {
-  margin: 0 auto;
+  margin: 0 7% 0 13%;
   width: 80%;
   max-width: 1200px;
 }
@@ -507,6 +507,7 @@ a {
   height: 100vh;
   left: 0;
   position: fixed;
+  text-transform: uppercase;
   top: 0;
   width: 8vw;
   z-index: 99999999;
@@ -532,10 +533,30 @@ a {
   height: 20vh;
 }
 
+.menu a[href$="about"] i:hover {
+  color: #3BC391;
+}
+
+.menu a[href$="skills"] i:hover {
+  color: #2f79c3;
+}
+
+.menu a[href$="portfolio"] i:hover {
+  color: #eb4549;
+}
+
+.menu a[href$="contact"] i:hover {
+  color: #374047;
+}
+
 .menu li a {
   display: block;
   font-size: 1.2vw;
   height: 100%;
+}
+
+.active {
+  background-color: red;
 }
 
 .about {
@@ -553,33 +574,33 @@ a {
 .about-flex {
   display: flex;
   flex-direction: row;
-  margin-top: 8%;
   justify-content: space-between;
+  margin-top: 8%;
 }
 
 .about-image {
-  width: 40%;
   position: relative;
+  width: 40%;
   text-align: center;
 }
 
 .about-image img {
-  max-width: 350px;
-  position: absolute;
   bottom: 0;
   left: 20%;
+  position: absolute;
+  max-width: 350px;
 }
 
 .about-text {
+  padding-bottom: 5%;
   width: 50%;
   text-align: right;
-  padding-bottom: 5%;
 }
 
 .about-quote {
+  background-color: #35af82;
   font-size: 2rem;
   font-weight: bolder;
-  background-color: #2f9c74;
   padding: 4% 0 3%;
   width: 100%;
 }
@@ -592,6 +613,85 @@ a {
   font-size: 1rem;
   font-weight: normal;
   text-align: right;
+}
+
+.skills {
+  background-color: #2f79c3;
+}
+
+.skills h2 {
+  color: #1d1d1d;
+  font-size: 3rem;
+  margin: 0;
+  padding: 5% 0;
+  text-transform: uppercase;
+}
+
+.skills-flex {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.skills-headline i,
+.skills-future i {
+  font-size: 3rem;
+}
+
+.skills-headline p,
+.skills-future p {
+  text-transform: uppercase;
+  font-weight: bolder;
+  padding: 2% 0;
+}
+
+.skills-set {
+  background-color: #2a6cae;
+  margin: 2% 0;
+  padding: 2% 0;
+}
+
+.skills-set:first-child {
+  margin-top: 0;
+}
+
+.skills img {
+  display: inline-block;
+  margin: 2%;
+}
+
+.skills-bar-future {
+  background-color: #25609a;
+  padding: 2% 0;
+}
+
+.skills-future p {
+  text-transform: uppercase;
+  font-weight: bolder;
+}
+
+.portfolio {
+  background-color: #eb4549;
+}
+
+.portfolio h2 {
+  color: #1d1d1d;
+  font-size: 3rem;
+  margin: 0;
+  padding: 5% 0;
+  text-transform: uppercase;
+}
+
+.contact {
+  background-color: #374047;
+}
+
+.contact h2 {
+  color: #1d1d1d;
+  font-size: 3rem;
+  margin: 0;
+  padding: 5% 0;
+  text-transform: uppercase;
 }
 
 /*# sourceMappingURL=style.css.map */
