--- a/css/style.scss
+++ b/css/style.scss
@@ -102,32 +102,30 @@ a {
 
 .menu li {
   height: 20vh;
+  border-top-left-radius: 40px;
+  border-bottom-left-radius: 40px;
 }
 
 .menu a[href$="about"] i:hover {
-  color: $color-mainGreen;
+  color: darken($color-mainGreen, 10%);
 }
 
 .menu a[href$="skills"] i:hover {
-  color: $color-mainBlue;
+  color: darken($color-mainBlue, 10%);
 }
 
 .menu a[href$="portfolio"] i:hover {
-  color: $color-mainRed;
+  color: darken($color-mainRed, 10%);
 }
 
 .menu a[href$="contact"] i:hover {
-  color: $color-mainGrey;
+  color: darken($color-mainGrey, 10%);
 }
 
 .menu li a {
   display: block;
   font-size: 1.2vw;
   height: 100%;
-}
-
-.active {
-  background-color: red;
 }
 
 // ====== ABOUT SECTION ======
@@ -250,6 +248,110 @@ a {
 .portfolio h2 {
   @include headlineTwo;
 }
+
+.slide {
+  margin-bottom: 5%;
+}
+
+.image-portfolio-main,
+.image-portfolio-side {
+  border: 5px solid $color-mainBlack;
+  display: inline-block;
+  max-width: 500px;
+}
+
+.text-portfolio-main,
+.text-portfolio-side{
+  background: darken($color-mainRed, 5%);
+  display: inline-block;
+  font-size: 1.2rem;
+  letter-spacing: 1px;
+  line-height: 1.55;
+  margin-left: 5%;
+  padding: 5%;
+  width: 40%;
+  vertical-align: top;
+}
+
+.image-portfolio-side {
+  border: none;
+}
+
+.text-portfolio-side {
+  line-height: initial;
+  padding: 2%;
+  text-align: left;
+}
+
+.text-portfolio-side h3 {
+  margin: 3% 0;
+}
+
+.portfolio-skills-list {
+  margin: 3% 0;
+  padding: 0;
+  list-style: none;
+}
+
+.portfolio-skills-list li {
+  background: $color-mainRed;
+  border-radius: 5px;
+  color: $color-mainBlack;
+  display: inline-block;
+  margin: 3px;
+  padding: 1px 4px;
+}
+
+.seeBtn {
+  background-color: $color-mainGrey;
+  color: $color-mainWhite;
+  display: inline-block;
+  font-size: 1.2rem;
+  font-weight: bolder;
+  margin: 5% 0 0;
+  padding: 10px 20px;
+  text-transform: uppercase;
+  transition: .2s;
+}
+
+.seeBtn:hover {
+  background: $color-mainBlack;
+  color: $color-mainRed;
+  transition: .2s;
+}
+
+.owl-theme .owl-controls .owl-buttons div {
+  padding: 20px !important;
+}
+
+.owl-theme .owl-buttons i{
+  margin-top: 2px;
+  font-size: 2rem;
+}
+
+.owl-pagination {
+  padding-bottom: 40px;
+}
+
+//To move navigation buttons outside use these settings:
+
+.owl-theme .owl-controls .owl-buttons div {
+  position: absolute;
+}
+
+.owl-theme .owl-controls .owl-buttons .owl-prev{
+  background: none;
+  left: -45px;
+  top: 150px;
+}
+
+.owl-theme .owl-controls .owl-buttons .owl-next{
+  background: none;
+  right: -45px;
+  top: 150px;
+}
+
+
 
 // ====== CONTACT SECTION ======
 
