11 added media queries to about and skills section

--- a/css/_mixins.scss
+++ b/css/_mixins.scss
@@ -55,4 +55,11 @@
   margin:0;
   padding: 5% 0;
   text-transform: uppercase;
+  @media #{$media600} {
+    font-size: 2rem;
+  }
+}
+
+@mixin mq {
+
 }
