--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -13,3 +13,11 @@ $color-mainBlack: #1d1d1d;
 $color-mainBlue: #2f79c3;
 $color-mainGrey: #374047;
 $color-mainRed: #eb4549;
+
+
+// ====== MEDIA QUERIES ======
+
+$media600: "screen and (max-width: 600px)";
+$media700: "screen and (max-width: 700px)";
+$media900: "screen and (max-width: 900px)";
+$media1050: "screen and (max-width: 1050px)";
