--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -19,5 +19,7 @@ $color-mainRed: #eb4549;
 
 $media600: "screen and (max-width: 600px)";
 $media700: "screen and (max-width: 700px)";
+$media750: "screen and (max-width: 750px)";
 $media900: "screen and (max-width: 900px)";
 $media1050: "screen and (max-width: 1050px)";
+$media1130: "screen and (max-width: 1130px)";
