13 changed some media queires in portfolio

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -17,6 +17,8 @@ $color-mainRed: #eb4549;
 
 // ====== MEDIA QUERIES ======
 
+
+$media400: "screen and (max-width: 400px)";
 $media600: "screen and (max-width: 600px)";
 $media700: "screen and (max-width: 700px)";
 $media750: "screen and (max-width: 750px)";
